--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+# FastAPI
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
+
+# MongoDB
+pymongo==4.15.1
+
+# Autenticação
+PyJWT==2.10.1
+passlib[bcrypt]==1.7.4
+
+# Environment & Settings
+pydantic-settings==2.11.9
+python-dotenv==1.0.1
