--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+# FastAPI
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
+
+# MongoDB
+pymongo==4.15.1
+pydantic==2.11.9
+
+# Autenticação
+PyJWT==2.10.1
+passlib[bcrypt]==1.7.4
+
+# Variaveis de ambiente
+python-dotenv==1.1.1
