--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pydantic==2.11.9
 # Autenticação
 PyJWT==2.10.1
 passlib[bcrypt]==1.7.4
+pydantic[email]==2.11.9
 
 # Variaveis de ambiente
 python-dotenv==1.1.1
