--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ pydantic==2.11.9
 
 # Autenticação
 PyJWT==2.10.1
-passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
+passlib==1.7.4
 pydantic[email]==2.11.9
 
 # Variaveis de ambiente
 python-dotenv==1.1.1
 pydantic-settings==2.11.0
+
+# Utilitarios
+python-multipart==0.0.20
