--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,14 @@ VERSION="1.0.0"
 # ===== SECURITY =====
 SECRET_KEY="coloque-seu-segredo-aqui"
 JWT_EXPIRATION_MINUTES=1440
+ALGORITHM="HS256"
 
 # ===== DATABASE (Local) =====
 MONGODB_URL="mongodb://localhost:27017"
 DATABASE_NAME="mythica_dev"
 
 # ===== CORS =====
-CORS="http://localhost:4200,http://127.0.0.1:4200"
+CORS="http://localhost:4200"
 
 # ===== LLM (Futuro) =====
 OPENAI_API_KEY=""
