refactor: adiciona variaveis para configurar llm

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,9 @@ DATABASE_NAME="mythica_dev"
 # ===== CORS =====
 CORS="http://localhost:4200"
 
-# ===== LLM (Futuro) =====
-OPENAI_API_KEY=""
+# ===== LLM (OpenAI) =====
+OPENAI_API_KEY="sua-chave-aqui"
+OPENAI_BASE_URL="https://api.openai.com/v1"
+OPENAI_MODEL="openai/gpt-4o-mini"
+LLM_MAX_TOKENS=2000
+LLM_TEMPERATURE=0.7
